--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,23 @@
     <string name="title_activity_movie_details">MovieDetails</string>
     <string name="title_activity_detail_activity_fragment">DetailActivityFragment</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_review">ReviewActivity</string>
+    <string name="title_activity_base">BaseActivity</string>
+    <string name="server_base_url">http://api.themoviedb.org/3/discover/movie</string>
+    <string name="movie_url">http://api.themoviedb.org/3/movie</string>
+    <string name="server_api_key">57dc2ce682dda520c48d83d5e00c8ba8</string>
+    <string name="action_sort_user_rating">Sort by User rating</string>
+    <string name="title_activity_details">Movie Details</string>
+    <string name="action_sort_popularity">Sort by Popularity</string>
+    <string name="dialog_authorization_title">Authorization Error Occurred</string>
+    <string name="dialog_authorization_body">Please paste the api-key for themoviedb.org, or check project readme and set it programmatically!\nCancel will retry the current key</string>
+    <string name="dialog_authorization_ok">Ok</string>
+    <string name="dialog_authorization_cancel">Cancel</string>
+    <string name="dialog_authorization_hint">Api-key as provided by themoviedb.org</string>
+    <string name="dialog_progress_title">Loading Movies...</string>
+    <string name="dialog_progress_message">Please wait.</string>
+    <string name="action_show_favorites">Show Favorites</string>
+    <string name="title_activity_movie_list">MovieListActivity</string>
+    <string name="button_trailer">Trailers</string>
+    <string name="button_reviews">Reviews</string>
 </resources>
